--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
+* {
+    box-sizing: border-box;
+}
+body {
+    overflow-x: hidden;
+}
+
 .header{
     height: 70px;
-    width:1300px;
+    width:100%;
     /* background-color:burlywood; */
     /* background-color: aqua; */
     display: flex;
@@ -29,7 +36,7 @@
 }
 
 .header-line {
-    width: 1300px;
+    width: 100%;
     border: 1px solid black; /* You can adjust the color and thickness here */
     position: absolute;
     bottom: 0;
@@ -42,7 +49,7 @@
 .landing{
     margin-top: 50px;
     height: 600px;
-    width: 1300px;
+    width: 100%;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -94,7 +101,7 @@ a{
     align-items: center;
     /* flex-direction: row; */
     height: 600px;
-    width: 1500px;
+    width: 100%;
     margin-left: 90px;
 }
 img{
@@ -154,21 +161,21 @@ img{
     /* background-color: aquamarine; */
     margin-top: 120px;
     display: flex;
-    width: 1300px;
+    width: 100%;
     justify-content:flex-end ;
     flex-direction:column;
     align-items: center;
    
 }
 .footer-line{
-    width: 1300px;
+    width: 100%;
     border: 1px solid black; /* You can adjust the color and thickness here */
     /* position: absolute; */
     bottom: 0;
 }
 .footer{
     height: 200px;
-    width: 1300px;
+    width: 100%;
     align-items: center;
     display: flex;
     flex-direction: column;
