--- a/about.css
+++ b/about.css
@@ -1,6 +1,6 @@
 .header{
     height: 70px;
-    width:1300px;
+    width:100%;
     /* background-color:burlywood; */
     /* background-color: aqua; */
     display: flex;
@@ -36,13 +36,13 @@ a{
     text-decoration:none
 }
 .header-line {
-    width: 1300px;
+    width: 100%;
     border: 1px solid black; /* You can adjust the color and thickness here */
     position: absolute;
     bottom: 0;
 }
 .intro{
-    width: 1300px;
+    width: 100%;
     padding-bottom: 10px;
     margin-top: 70px;
     display: flex;
@@ -54,7 +54,7 @@ a{
 }
 .middleline{
     margin-top: 800px;
-    width: 1300px;
+    width: 100%;
     border: 5px solid black;
     bottom: 0;
 }
@@ -132,7 +132,7 @@ a{
 }
 .person1{
     height: 400px;
-    width: 1200px;
+    width: 100%;
     /* background-color: brown; */
     display: flex;
     flex-direction: row;
@@ -159,7 +159,7 @@ a{
 }
 
 .footer-line{
-    width: 1300px;
+    width: 100%;
     border: 1px solid black; /* You can adjust the color and thickness here */
     /* position: absolute; */
     bottom: 0;
@@ -167,7 +167,7 @@ a{
 .footer{
     margin-top: 150px;
     height: 200px;
-    width: 1300px;
+    width: 100%;
     align-items: center;
     display: flex;
     flex-direction: column;
