--- a/style.css
+++ b/style.css
@@ -74,16 +74,16 @@ body {
     font-size: 10px;
 } */
 #landimg{
-    height: 300px;
-    width: 600px;
+    height: 267px;
+    width: 625px;
 }
 #invest{
     margin-bottom: -20px;
     font-family: "Inter", serif;
     font-size: 24px;
-    font-weight: 200;
+    font-weight: 100;
     color: #424242;
-    webkit-font-smoothing: antialiased;
+    
 }
 
 button{
@@ -137,14 +137,14 @@ img{
 
 .div1{
     /* background-color: red; */
-    height: 350px;
+    height: 280px;
     width: 350px;
 }
 .div2{
     /* background-color: brown; */
     color: #424242;
     font-size: 20px;
-    font-weight: 400;
+    font-weight: 100;
     font-family: "Inter", serif;
     height: 50px;
     width: 500px;
@@ -171,7 +171,10 @@ img{
 }
 .div4left{
     width: 215px;
-    height: 55px;
+    height: 120px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
    
 }
 .div4right{
