--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .header{
-    height: 70px;
+    height: 73px;
     width:100%;
     /* background-color:burlywood; */
     /* background-color: aqua; */
@@ -49,10 +49,10 @@ body {
     bottom: 0;
 }
 #logo{
-    margin-top: 4px;
-    height: 45px;
+    margin-top: 8px;
+    height: 40px;
     width: 170px;
-    margin-left: 49px;
+    margin-left: 59px;
 }
 .landing{
     margin-top: 10px;
@@ -132,7 +132,7 @@ a{
     /* flex-direction: row; */
     height: 600px;
     width: 100%;
-    margin-left: 90px;
+    margin-left: 80px;
 }
 img{
     margin-top: 40px;
@@ -141,7 +141,7 @@ img{
     
 }
 .sub{
-    margin-left: 120px;
+    margin-left:150px;
     margin-top: -10px;
     width: 600px;
     
@@ -171,36 +171,62 @@ img{
 }
 .div3{
     /* background-color: burlywood; */
-    margin-top: 10px;
-    height: 50px;
+    margin-top: 25px;
+    height: 70px;
     width: 500px;
     display: flex;
     
 }
 .div4{
     display: flex;
-    margin-left: 0px;
-    width: 500px;
+    margin-left: -25px;
+    width: 520px;
     height: 120px;
     /* align-self:baseline; */
     justify-content: space-between;
     margin-left: 0px;
     flex-direction: row;
-    margin-top: 30px;
+    margin-top: 1px;
     /* background-color: aliceblue; */
 }
 .div4left{
     width: 215px;
-    height: 120px;
+    height: 180px;
     display: flex;
+    margin-left: -20px;
     flex-direction: column;
     justify-content: space-between;
    
 }
+.lefty{
+    display: flex;
+    height: 120px;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
 .div4right{
-    width: 215px;
-    height: 55px;
+    width: 255px;
+    height: 180px;
+    display: flex;
+    margin-left: -20px;
+    flex-direction: column;
+    justify-content: space-between;
+    /* background-color: aqua; */
     
+}
+.righty{
+    display: flex;
+    height: 120px;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+/* .div5{
+    width: 540px;
+    height: 100px;
+} */
+.mint{
+    width: 540px;
+    height: 70px;
 }
 .bottom{
     display: flex;
