--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
  width: 900px;
  display: flex;
  height: 25px;
+ color: #666666;
  /* background-color: bisque; */
  justify-content:space-between;
  transition: all 0.1s ease-in;
